tests/snapshots/tui__edit_file_modal.snap
---
source: tests/tui.rs
expression: terminal.backend()
---
" sqli v1.0.3                                                                                        "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│No connection selected                                                               Run Query    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Collections───────┐┌Workspace─────────────────────────────────────────────────────────────────────┐"
"│▶ users (user)    ││ 1                                                                            │"
"│▶ users (cwd)     ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││    ┌───────────────────Edit File────────────────────┐                        │"
"│                  ││    │                                                │                        │"
"│                  ││    │ ┌Name────────────────────────────────────────┐ │                        │"
"│                  ││    │ │list.sql                                    │ │                        │"
"│                  ││    │ └────────────────────────────────────────────┘ │                        │"
"│                  ││    │        Cancel        Delete         Save       │                        │"
"│                  ││    │                                                │                        │"
"│                  │└────└────────────────────────────────────────────────┘────────────────────────┘"
"│                  │┌Results───────────────────────────────────────────────────────────────────────┐"
"│                  ││       No query results to display. Run a query using the button above.       │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"└──────────────────┘└Query time: 0ms | 0 rows──────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Tab Switch Panel  Space Select  ^C Quit                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
