tests/snapshots/tui__main_ui_layout.snap
---
source: tests/tui.rs
expression: terminal.backend()
---
" sqli v1.0.3                                                                                        "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│test_db                                                                              Run Query    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Collections───────┐┌Workspace─────────────────────────────────────────────────────────────────────┐"
"│  config.yaml (use││ 1                                                                            │"
"│  config.yaml (cwd││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  │└──────────────────────────────────────────────────────────────────────────────┘"
"│                  │┌Results───────────────────────────────────────────────────────────────────────┐"
"│                  ││       No query results to display. Run a query using the button above.       │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"└──────────────────┘└Query time: 0ms | 0 rows──────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Tab Switch Panel  Space Select  ^C Quit                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
