tests/snapshots/tui__modal_dialog.snap
---
source: tests/tui.rs
expression: terminal.backend()
---
" sqli v1.0.3                                                                                        "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│No connection selected                                                               Run Query    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Collections───────┐┌Workspace─────────────────────────────────────────────────────────────────────┐"
"│                  ││ 1                                                                            │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││    ┌─────────────────Enter Password─────────────────┐                        │"
"│                  ││    │                                                │                        │"
"│                  ││    │ ┌Password────────────────────────────────────┐ │                        │"
"│                  ││    │ │                                            │ │                        │"
"│                  ││    │ └────────────────────────────────────────────┘ │                        │"
"│                  ││    │                Cancel        Submit            │                        │"
"│                  ││    │             ▁▁▁▁▁▁▁▁▁▁▁▁  ▁▁▁▁▁▁▁▁▁▁▁▁         │                        │"
"│                  │└────│                                                │────────────────────────┘"
"│                  │┌Resu└────────────────────────────────────────────────┘────────────────────────┐"
"│                  ││       No query results to display. Run a query using the button above.       │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"└──────────────────┘└Query time: 0ms | 0 rows──────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Tab Switch Panel  Space Select  ^C Quit                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
