tests/snapshots/tui__new_file_modal.snap
---
source: tests/tui.rs
expression: terminal.backend()
---
" sqli v1.0.3                                                                                        "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│No connection selected                                                               Run Query    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Collections───────┐┌Workspace─────────────────────────────────────────────────────────────────────┐"
"│                  ││ 1                                                                            │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││    ┌────────────────New File/Folder─────────────────┐                        │"
"│                  ││    │                                                │                        │"
"│                  ││    │ ┌Name────────────────────────────────────────┐ │                        │"
"│                  ││    │ └────────────────────────────────────────────┘ │                        │"
"│                  ││    │                                                │                        │"
"│                  ││    │ (*) File               ( ) Folder              │                        │"
"│                  ││    │ (*) Local              ( ) User                │                        │"
"│                  ││    │             ▔▔▔▔▔▔▔▔▔▔▔▔  ▔▔▔▔▔▔▔▔▔▔▔▔         │                        │"
"│                  ││    │                Cancel        Create            │                        │"
"│                  │└────│             ▁▁▁▁▁▁▁▁▁▁▁▁  ▁▁▁▁▁▁▁▁▁▁▁▁         │────────────────────────┘"
"│                  │┌Resu│                                                │────────────────────────┐"
"│                  ││    └────────────────────────────────────────────────┘the button above.       │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"└──────────────────┘└Query time: 0ms | 0 rows──────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Tab Switch Panel  Space Select  ^C Quit                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
