tests/snapshots/tui__results_pane_with_data.snap
---
source: tests/tui.rs
expression: terminal.backend()
---
" sqli v1.0.3                                                                                        "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│No connection selected                                                               Run Query    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Collections───────┐┌Workspace─────────────────────────────────────────────────────────────────────┐"
"│                  ││ 1                                                                            │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  │└──────────────────────────────────────────────────────────────────────────────┘"
"│                  │┌Results───────────────────────────────────────────────────────────────────────┐"
"│                  ││   id   name                    email                  order_count           █│"
"│                  ││>> 1    John Doe                john@example.com       5                     █│"
"│                  ││   2    Jane Smith              jane@example.com       3                     █│"
"│                  ││   3    Bob Johnson             bob@example.com        7                     ║│"
"│                  ││   4    Alice Brown             alice@example.com      2                     ║│"
"└──────────────────┘└Query time: 42ms | 5 rows─────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Tab Switch Panel  Space Select  ^C Quit                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
