tests/snapshots/tui__workspace_pane_with_content.snap
---
source: tests/tui.rs
expression: terminal.backend()
---
" sqli v1.0.3                                                                                        "
"┌Connection────────────────────────────────────────────────────────────────────────────────────────┐"
"│No connection selected                                                               Run Query    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Collections───────┐┌Workspace─────────────────────────────────────────────────────────────────────┐"
"│                  ││ 1 SELECT u.id, u.name, u.email, COUNT(o.id) as order_count                   │"
"│                  ││ 2 FROM users u                                                               │"
"│                  ││ 3 LEFT JOIN orders o ON u.id = o.user_id                                     │"
"│                  ││ 4 WHERE u.status = 'active'                                                  │"
"│                  ││ 5 GROUP BY u.id, u.name, u.email                                             │"
"│                  ││ 6 ORDER BY order_count DESC                                                  │"
"│                  ││ 7 LIMIT 10;                                                                  │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  │└──────────────────────────────────────────────────────────────────────────────┘"
"│                  │┌Results───────────────────────────────────────────────────────────────────────┐"
"│                  ││       No query results to display. Run a query using the button above.       │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"│                  ││                                                                              │"
"└──────────────────┘└Query time: 0ms | 0 rows──────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Tab Switch Panel  Space Select  ^C Quit                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
